# LSTM

./: README.md
rnn/: CMakeLists.txt  TODO  lstm.cpp  lstm.h  lstm_test.cpp  rnn.cpp  rnn.h  rnn_test.cpp  text.txt  utils.hpp  weight_init.cpp  weight_init.h
